rootdir: Change ipa trigger level to early-boot
On fs/post-fs trigger there are chances of vendor partition mounting,
which may block ipa loading. To prevent the same change the trigger level.

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -74,6 +74,9 @@ on post-fs-data
     mkdir /data/vendor/hbtp 0750 system system
     mkdir /data/vendor/nnhal 0700 system system
 
+on early-boot
+    write /dev/ipa 1
+
 # For cpusets initialize for Silver Only first and then Silver + Gold
 # Silver Only configuration cannot work with 0-7
 on boot
