kunlun2: Start init.qcom.sensors.sh on demand
Change-Id: Ib6c4c4315a736d588289b60ed5c8d8595f003676

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -990,6 +990,7 @@ service vendor-sensor-sh /vendor/bin/init.qcom.sensors.sh
     class core
     user root
     oneshot
+    disabled
 
 service crashdata-sh /vendor/bin/init.qcom.crashdata.sh
     class late_start
