wifi: Add ini ignore_fw_reg_offload_ind
Add ini "ignore_fw_reg_offload_ind" to ignore regulatory
offload indicatin from fw.

Change-Id: Ie45bc35455efb4b3fd3512bafe140d4ae9580c4b
CRs-Fixed: 2542055

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -500,6 +500,8 @@ gItoRepeatCount=4
 #Increasing beacon misses count, it will be more tolerant to disconnections, default is 40
 gHeartbeat24=100
 
+ignore_fw_reg_offload_ind=1
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
