rootdir: Default enable uicc se
It should be true in new versions.
uicc_se_enabled is true by default, but persist property
may remain false after ota

Bug: 149075883
Test: enable uicc_se
Change-Id: I78f8d51cb9ffb92f4eb7dea232920c2b69ce359d
Signed-off-by: Chenyang Zhong <zhongcy95@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -367,6 +367,9 @@ on boot
     mkdir /data/vendor/sensors
     chown system system /data/vendor/sensors
 
+    # Default enable uicc_se
+    setprop persist.vendor.radio.uicc_se_enabled true
+
 on late-fs
     # Runtime fs tuning
     write /sys/block/sda/queue/iostats 0
@@ -380,7 +383,7 @@ on late-fs
     chmod 0664 sys/power/system_sleep/stats
     chmod 0664 /sys/power/rpmh_stats/master_stats
 
-# msm specific files that need to be created on /data
+# MSM specific files that need to be created on /data
 on post-fs-data
     mkdir /data/vendor/misc 01771 system system
 
