init: Disable serial console notification
Google added a check for this prop in R, and if it's running
it will show a notification about it that it's impacting performance.
Why it's not disabled by default I don't know, so just force disable
it here.

Change-Id: Ia06ef15388e7e701ed526664e7748f133ad01ee2

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -237,6 +237,8 @@ on boot
 
     setprop net.tcp.2g_init_rwnd 10
 
+    setprop init.svc.console stopped
+
     # To prevent out of order acknowledgements from making
     # connection tracking to treat them as not belonging to
     # the connection they belong to.
@@ -359,7 +361,6 @@ on boot
 
     # Create vpp directory
     mkdir /mnt/vendor/persist/vpp 0770 media media
-
 
     # Create hvdcp_opti directory
     mkdir /mnt/vendor/persist/hvdcp_opti 0770 root system
