--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -671,6 +671,12 @@ on property:persist.vendor.radio.atfwd.start=false
 on property:vendor.radio.atfwd.start=false
     stop vendor.atfwd
 
+    # Enable ZRAM on boot_complete
+    rm /data/unecrypted/zram_swap
+    swapon_all /vendor/etc/fstab.qcom
+    write /proc/sys/vm/swappiness 100
+    write /proc/sys/vm/watermark_scale_factor 120	
+	
 # corefile limit
 on property:persist.debug.trace=1
     mkdir /data/core 0777 root root
