wifi: update WCNSS configs

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -4,6 +4,9 @@
 # Enable IMPS or not
 gEnableImps=1
 
+# Enable BMPS or not
+gEnableBmps=1
+
 # Phy Mode (auto, b, g, n, etc)
 # Valid values are 0-9, with 0 = Auto, 4 = 11n, 9 = 11ac
 # 1 = 11abg, 2 = 11b, 3 = 11g, 5 = 11g only, 6 = 11n only
@@ -40,6 +43,15 @@ gEnableApOBSSProt=1
 
 #Enable/Disable UAPSD for SoftAP
 gEnableApUapsd=1
+
+# Fixed Rate
+gFixedRate=0
+
+# Maximum Tx power
+# gTxPowerCap=30
+
+# Fragmentation Threshold
+# gFragmentationThreshold=2346
 
 # RTS threshold
 RTSThreshold=1048576
@@ -78,7 +90,7 @@ FastRoamEnabled=1
 # terms of RSSI.  Checking is disabled if set to Zero.Otherwise it will
 # use this value as to how better the RSSI of the new/roamable AP should
 # be for roaming
-RoamRssiDiff=5
+RoamRssiDiff=10
 
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
@@ -88,8 +100,14 @@ gRoamIntraBand=0
 gShortGI20Mhz=1
 gShortGI40Mhz=1
 
+#Auto Shutdown  Value in seconds. A value of 0 means Auto shutoff is disabled
+gAPAutoShutOff=0
+
 #Auto Shutdown wlan : Value in Seconds. 0 means disabled. Max 1 day = 86400 sec
 gWlanAutoShutdown = 0
+
+# Not used.
+gApAutoChannelSelection=0
 
 #Preferred band (both or 2.4 only or 5 only)
 BandCapability=0
@@ -139,6 +157,11 @@ gVhtChannelWidth=2
 # LRO and GRO are exclusive to each other
 # LRO support is deprecated on latest 4.9(SDM845) kernel
 GROEnable=1
+
+# Enable/Disable DTIM Synth
+# 1- Enable DTIM Synth
+# 0- Disable DTIM Synth
+gEnableLPRx=0
 
 #Data Inactivity Timeout when in powersave (in ms)
 gDataInactivityTimeout=200
@@ -194,6 +217,9 @@ gEnableTxSUBeamformer=1
 
 gEnableFastRoamInConcurrency=1
 
+#Maxium Channel time in msec
+gMaxMediumTime = 6000
+
 # 802.11K support
 gRrmEnable=1
 
@@ -234,6 +260,10 @@ gEnableMCCAdaptiveScheduler=1
 #Enable or Disable p2p device address administered
 isP2pDeviceAddrAdministrated=0
 
+# Set Thermal Power limit
+TxPower2g=10
+TxPower5g=10
+
 # Remove Overlap channel restriction
 gEnableOverLapCh=0
 
@@ -265,6 +295,10 @@ gRArateLimitInterval=600
 # Maximum number of concurrent connections
 gMaxConcurrentActiveSessions=3
 
+# Disable/Enable GreenAP
+# 0 to disable, 1 to enable, default: 1
+gEnableGreenAp=0
+
 # Radar PRI multiplier
 gDFSradarMappingPriMultiplier=4
 
@@ -277,9 +311,17 @@ gEnableLpassSupport=1
 # Whether userspace country code setting shld have priority
 gCountryCodePriority=1
 
+# Enable(1)/Disable(0) SIFS burst
+gEnableSifsBurst=1
+
 # Enable or Disable Multi-user MIMO
 # 1=Enable (default), 0=Disable
 gEnableMuBformee=1
+
+# Enable/Disable channel avoidance for SAP in SCC scenario
+# 0 - disable
+# 1 - enable
+gSapSccChanAvoidance=0
 
 # Inactivity time (in ms) to end TX Service Period while in IBSS power save mode
 gIbssTxSpEndInactivityTime=10
@@ -456,7 +498,13 @@ sae_enabled=0
 gRoamPrefer5GHz=1
 gSelect5GHzMargin=3
 
+#add ito repeat to solve crash issue
+gItoRepeatCount=4
+
+#Increasing beacon misses count, it will be more tolerant to disconnections, default is 40
+gHeartbeat24=100
 
 END
 
 # Note: Configuration parser would not read anything past the END marker
+
