--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -31,6 +31,7 @@ import /vendor/etc/init/hw/init.target.rc
 import /vendor/etc/init/hw/init.qcom.factory.rc
 import /vendor/etc/init/hw/init.lenovo.rc
 import /vendor/etc/init/hw/init.lenovo.usb.configfs.rc
+import /vendor/etc/init/hw/logcat.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
