--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -140,6 +140,11 @@ service vendor.pd_mapper /vendor/bin/pd-mapper
     user system
     group system
 
+service loggy /vendor/bin/loggy.sh
+    class core
+    user root
+    oneshot
+
 #Peripheral manager
 service vendor.per_mgr /vendor/bin/pm-service
     class core
