--- a/thermal/android.hardware.thermal@2.0-service.lenovo.rc
+++ b/thermal/android.hardware.thermal@2.0-service.lenovo.rc
@@ -1,5 +1,5 @@
-service vendor.thermal-hal-2-0 /system/bin/hw/android.hardware.thermal@2.0-service.lenovo
-	interface android.hardware.thermal@1.0::IThermal default
+service vendor.thermal-hal-2-0 /vendor/bin/hw/android.hardware.thermal@2.0-service.lenovo
+    interface android.hardware.thermal@1.0::IThermal default
     interface android.hardware.thermal@2.0::IThermal default
     class hal
     user system
