--- a/power-libperfmgr/aidl/android.hardware.power-service.lenovo-libperfmgr.rc
+++ b/power-libperfmgr/aidl/android.hardware.power-service.lenovo-libperfmgr.rc
@@ -19,6 +19,10 @@ on property:init.svc.vendor.audio-hal-2-0=restarting && property:vendor.powerhal
     setprop vendor.powerhal.audio ""
     restart vendor.power-hal-aidl
 
+# initialize powerHAL when boot is completed
+on property:sys.boot_completed=1
+   setprop vendor.powerhal.init 1
+
 # Clean up after b/163539793 resolved
 on property:vendor.powerhal.dalvik.vm.dex2oat-threads=*
     setprop dalvik.vm.dex2oat-threads ${vendor.powerhal.dalvik.vm.dex2oat-threads}
