--- a/light/android.hardware.light@2.0-service.lenovo.rc
+++ b/light/android.hardware.light@2.0-service.lenovo.rc
@@ -57,7 +57,7 @@ on boot
     chmod 660 /sys/class/leds/green/ramp_step_ms
     chmod 660 /sys/class/leds/green/start_idx
 
-service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service
+service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.lenovo
     interface android.hardware.light@2.0::ILight default
     class hal
     user system
