--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -120,11 +120,19 @@ on init
     # b/37682684 Enable suspend clock reporting
     write /sys/kernel/debug/clk/debug_suspend 1
 
-    # ZRAM setup############################################
+    ## Set swap parameters and enable swapping
+    # Set compression algorithm for ZRAM to LZ4
     write /sys/block/zram0/comp_algorithm lz4
-    write /sys/block/zram0/disksize 2147483648
-    write /sys/block/zram0/max_comp_streams 8
+    # Disable swap read-ahead
     write /proc/sys/vm/page-cluster 0
+    # Set aggressive swapping
+    write /proc/sys/vm/swappiness 100
+    # Set kswapd agressiveness to minimum
+    write /proc/sys/vm/watermark_scale_factor 1
+    # Set allocstall_threshold to 0
+    write /sys/module/vmpressure/parameters/allocstall_threshold 0
+    # Enable swap
+    swapon_all /vendor/etc/fstab.qcom
 
 on post-fs
     chmod 0755 /sys/kernel/debug/tracing
@@ -666,13 +674,7 @@ on property:persist.vendor.radio.atfwd.start=false
     stop vendor.atfwd
 
 on property:vendor.radio.atfwd.start=false
-    stop vendor.atfwd
-
-    # Enable ZRAM on boot_complete
-    rm /data/unecrypted/zram_swap
-    swapon_all /vendor/etc/fstab.qcom
-    write /proc/sys/vm/swappiness 100
-    write /proc/sys/vm/watermark_scale_factor 120	
+    stop vendor.atfwd	
 	
 # corefile limit
 on property:persist.debug.trace=1
