--- a/rootdir/etc/init.power.rc
+++ b/rootdir/etc/init.power.rc
@@ -14,6 +14,51 @@
 # limitations under the License.
 #
 
+on init
+
+    # Setup permission for Power HAL
+    chown system system /sys/class/devfreq/soc:qcom,cpubw/min_freq
+    chown system system /sys/class/devfreq/soc:qcom,l3-cpu0/min_freq
+    chown system system /sys/class/devfreq/soc:qcom,l3-cpu6/min_freq
+
+    chown 0664 /sys/class/devfreq/soc:qcom,cpubw/min_freq
+    chown 0664 /sys/class/devfreq/soc:qcom,l3-cpu0/min_freq
+    chown 0664 /sys/class/devfreq/soc:qcom,l3-cpu6/min_freq
+
+    # Disable powersaving
+    write /sys/module/lpm_levels/parameters/sleep_disabled 1
+
+    # bring back all cores
+    write /sys/devices/system/cpu/cpu0/online 1
+    write /sys/devices/system/cpu/cpu1/online 1
+    write /sys/devices/system/cpu/cpu2/online 1
+    write /sys/devices/system/cpu/cpu3/online 1
+    write /sys/devices/system/cpu/cpu4/online 1
+    write /sys/devices/system/cpu/cpu5/online 1
+    write /sys/devices/system/cpu/cpu6/online 1
+    write /sys/devices/system/cpu/cpu7/online 1
+
+    # configure governor settings for little cluster
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor schedutil
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/up_rate_limit_us 0
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/down_rate_limit_us 0
+
+    # configure governor settings for big cluster
+    write /sys/devices/system/cpu/cpu6/cpufreq/scaling_governor schedutil
+    write /sys/devices/system/cpu/cpu6/cpufreq/schedutil/up_rate_limit_us 0
+    write /sys/devices/system/cpu/cpu6/cpufreq/schedutil/down_rate_limit_us 0
+
+on boot
+    # Disable console_suspend to get better logging for kernel crashes
+    write /sys/module/printk/parameters/console_suspend N
+
+    #Enable suspend to idle mode to reduce latency during suspend/resume
+    write /sys/power/mem_sleep "s2idle"
+
+# If UART is on, enable console_suspend on boot_complete to save power
+on property:sys.boot_completed=1 && property:init.svc.console=running
+    write /sys/module/printk/parameters/console_suspend Y
+
 on property:sys.boot_completed=1
     # Enable bus-dcvs
     write /sys/class/devfreq/soc:qcom,cpubw/governor "bw_hwmon"
@@ -29,10 +74,6 @@ on property:sys.boot_completed=1
     write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/idle_mbps 1600
 
     write /sys/class/devfreq/soc:qcom,mincpubw/governor "cpufreq"
-
-    # Set cpuset parameters
-    write /dev/cpuset/background/cpus 0-5
-    write /dev/cpuset/system-background/cpus 0-5
 
     # Enable memlat governor
     write /sys/class/devfreq/soc:qcom,memlat-cpu0/governor "mem_latency"
@@ -72,21 +113,3 @@ on property:sys.boot_completed=1
     write /sys/module/lpm_levels/L3/cpu5/ret/idle_enabled N
     write /sys/module/lpm_levels/L3/cpu6/ret/idle_enabled N
     write /sys/module/lpm_levels/L3/cpu7/ret/idle_enabled N
-
-# Disable console_suspend to get better logging for kernel crashes
-on boot
-	# For cpusets initialize for Silver only first and then Silver + Gold#######################################
-    # Silver only configuration cannot work with 0-7############################################################
-    write /dev/cpuset/top-app/cpus 0-7
-    write /dev/cpuset/background/cpus 0-1
-    write /dev/cpuset/system-background/cpus 0-3
-    write /dev/cpuset/restricted/cpus 2-5
-
-    write /sys/module/printk/parameters/console_suspend N
-
-    #Enable suspend to idle mode to reduce latency during suspend/resume
-    write /sys/power/mem_sleep "s2idle"
-
-# If UART is on, enable console_suspend on boot_complete to save power
-on property:sys.boot_completed=1 && property:init.svc.console=running
-    write /sys/module/printk/parameters/console_suspend Y
