--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -97,6 +97,13 @@ on init
     # Enable swap
     swapon_all /vendor/etc/fstab.qcom
 
+    # Start services for bootanim
+    start surfaceflinger
+    start bootanim
+    start vendor.hwcomposer-2-3
+    start vendor.configstore-hal
+    start vendor.qti.hardware.display.allocator
+
 on post-fs
     chmod 0755 /sys/kernel/debug/tracing
 
