wifi: set inactivity time
Wait for 1 second to let wifi driver do
complete clean reset of SW/HW.

Bug: 121391366
Test: perform watchdog recovery and success
Test: check value by iwpriv wlan0 getConfig
Change-Id: I84674970d4b3c16876c4ebaf71043062d1867c87

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -518,6 +518,9 @@ gChannelBondingMode24GHz=0
 # Enable/Disable rtt sta mac randomization
 enable_rtt_mac_randomization=1
 
+# Timer waiting for interface up from the upper layer
+gInterfaceChangeWait=1000
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
