wifi: Enable DFS channel scanning in P2P search
- Fixes P2P when connected to 5GHz access point.

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -521,6 +521,11 @@ enable_rtt_mac_randomization=1
 # Timer waiting for interface up from the upper layer
 gInterfaceChangeWait=1000
 
+#Skip DFS Channel in case of P2P Search
+# 0 - disable (Scan DFS Channel in P2P Search)
+# 1 - enable (Skip DFS Channel)
+gSkipDfsChannelInP2pSearch=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
