--- a/light/aidl/lights-lenovo.rc
+++ b/light/aidl/lights-lenovo.rc
@@ -1,5 +1,22 @@
+on boot
+    chown system system /sys/class/leds/white/brightness
+    chown system system /sys/class/leds/white/blink
+    
+    chown system system /sys/class/leds/red/blink
+    chown system system /sys/class/leds/green/blink
+    chown system system /sys/class/leds/blue/blink
+    chmod 660 sys/class/leds/red/blink
+    chmod 660 sys/class/leds/green/blink
+    chmod 660 sys/class/leds/blue/blink
+    chown system system /sys/class/leds/red/start_idx
+    chown system system /sys/class/leds/green/start_idx
+    chown system system /sys/class/leds/blue/start_idx
+    chown system system /sys/class/leds/red/lut_flags
+    chown system system /sys/class/leds/green/lut_flags
+    chown system system /sys/class/leds/blue/lut_flags
+
 service vendor.light-default /vendor/bin/hw/android.hardware.lights-service.lenovo
     class hal
-    user nobody
-    group nobody
+    user system
+    group system
     shutdown critical
