--- a/rootdir/ueventd.rc
+++ b/rootdir/ueventd.rc
@@ -339,6 +339,11 @@ firmware_directories /vendor/firmware_mnt/image/
 # Kmsg device
 /dev/kmsg                                               0620   root       system
 
+
+# PMQoSCpuDmaLatency
+/dev/cpu_dma_latency									0664   root       system
+
+
 # NPU device
 /dev/msm_npu             0644   system     system
 
@@ -381,3 +386,8 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/class/graphics/fb0     modes                    0664    system  graphics
 /sys/class/graphics/fb0     mode                     0664    system  graphics
 /sys/class/graphics/fb0     msm_cmd_autorefresh_en   0664    system  graphics
+/sys/class/kgsl/kgsl-3d0    force_rail_on            0664    root  system
+/sys/class/kgsl/kgsl-3d0    force_clk_on             0664    root  system
+/sys/class/kgsl/kgsl-3d0    devfreq/max_freq		 0664    root  system
+/sys/class/kgsl/kgsl-3d0    devfreq/min_freq		 0664    root  system
+/sys/class/kgsl/kgsl-3d0    idle_timer				 0664    root  system
