configs: change thermal_info_config.json
* for new Thermal HAL
* Error:
*E android.hardware.thermal@2.0-service.lenovo: Failed to parse JSON config

--- a/configs/thermal_info_config.json
+++ b/configs/thermal_info_config.json
@@ -151,6 +151,36 @@
             "Multiplier":0.001
         },
         {
+            "Name":"cpuss-0-usr",
+            "Type":"CPU",
+            "HotThreshold":[
+                "NAN",
+                "NAN",
+                "NAN",
+                95.0,
+                "NAN",
+                "NAN",
+                125.0
+            ],
+            "VrThreshold":"NAN",
+            "Multiplier":0.001
+        },
+        {
+            "Name":"cpuss-1-usr",
+            "Type":"CPU",
+            "HotThreshold":[
+                "NAN",
+                "NAN",
+                "NAN",
+                95.0,
+                "NAN",
+                "NAN",
+                125.0
+            ],
+            "VrThreshold":"NAN",
+            "Multiplier":0.001
+        },
+        {
             "Name":"battery",
             "Type":"BATTERY",
             "HotThreshold":[
@@ -164,7 +194,7 @@
             ],
             "VrThreshold":"NAN",
             "Multiplier":0.001
-        },   
+        }   
     ],
     "CoolingDevices":[
         {
