--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1174,11 +1174,11 @@ service vendor.hbtp /vendor/bin/hbtp_daemon
 #on property:vendor.chre.enabled=0
 #   stop chre
 
-service bugreport /system/bin/dumpstate -d -p -B -z -o /data/user_de/0/com.android.shell/files/bugreports/bugreport
-    class main
-    disabled
-    oneshot
-    keycodes 114 115 116
+# service bugreport /system/bin/dumpstate -d -p -B -z -o /data/user_de/0/com.android.shell/files/bugreports/bugreport
+#   class main
+#    disabled
+#    oneshot
+#    keycodes 114 115 116
 
 #Set GPU Opengles version
 on property:vendor.opengles.version=*
