--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -339,14 +339,15 @@ service cdsprpcd /vendor/bin/cdsprpcd
 on property:vendor.ims.QMI_DAEMON_STATUS=1
     start vendor.imsdatadaemon
 
-on property:vold.decrypt=trigger_restart_framework
-   start cnss_diag
+# on property:vold.decrypt=trigger_restart_framework
+#    start cnss_diag
 
 service cnss_diag /system/vendor/bin/cnss_diag -q -f -t HELIUM
    class main
    user system
    group system wifi inet sdcard_rw media_rw diag
    oneshot
+   disabled
 
 service ppd /vendor/bin/mm-pp-dpps
     class late_start
