--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:label="@string/device_settings_app_name"
         android:persistent="true">
 
-        <receiver android:name=".BootCompletedReceiver">
+        <receiver android:name=".BootCompletedReceiver" android:exported="true">
             <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -48,6 +48,7 @@
         <activity
             android:name=".doze.DozeSettingsActivity"
             android:label="@string/ambient_display_title"
+            android:exported="true"
             android:theme="@style/Theme.Main">
             <intent-filter>
                 <action android:name="com.aicp.settings.device.DOZE_SETTINGS" />
