--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:name=".doze.DozeSettingsActivity"
             android:label="@string/ambient_display_title"
             android:exported="true"
-            android:theme="@style/Theme.Main">
+            android:theme="@style/Theme.SubSettingsBase">
             <intent-filter>
                 <action android:name="com.aicp.settings.device.DOZE_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
