--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -78,7 +78,7 @@ on post-fs-data
 # Silver Only configuration cannot work with 0-7
 on boot
     chown system system /sys/kernel/hbtp/display_pwr
-    start rmt_storage
+    start vendor.rmt_storage
     start rfs_access
 
     ####Regionalization config and prop files####
