--- a/rootdir/ueventd.rc
+++ b/rootdir/ueventd.rc
@@ -391,3 +391,4 @@ firmware_directories /vendor/firmware_mnt/image/
 /sys/class/kgsl/kgsl-3d0    devfreq/max_freq		 0664    root  system
 /sys/class/kgsl/kgsl-3d0    devfreq/min_freq		 0664    root  system
 /sys/class/kgsl/kgsl-3d0    idle_timer				 0664    root  system
+/sys/class/kgsl/kgsl-3d0    perfcounter              0660    root    shell
