rootdir: Set the USB model to something more device specific
* Also allow devices to override ro.product.vendor.model
  in cases where it's not really suitable for UX facing
  stuff, e.g. on Lenovo Z6SE our model is L38111.
  This is not a suitable model to show users.

* D: adapted for Lenovo

--- a/rootdir/etc/init.qcom.usb.rc
+++ b/rootdir/etc/init.qcom.usb.rc
@@ -39,6 +39,7 @@ on charger
     write /config/usb_gadget/g1/configs/b.1/MaxPower 900
     symlink /config/usb_gadget/g1/configs/b.1 /config/usb_gadget/g1/os_desc/b.1
     exec u:r:vendor_qti_init_shell:s0 -- /vendor/bin/init.qcom.usb.sh
+    write /config/usb_gadget/g1/strings/0x409/product ${system.usb.product_string}
     setprop sys.usb.config mass_storage
     setprop sys.usb.configfs 1
 
@@ -109,7 +110,9 @@ on boot
     setprop sys.usb.mtp.device_type 3
     setprop vendor.usb.controller ${sys.usb.controller}
     exec u:r:vendor_qti_init_shell:s0 -- /vendor/bin/init.qcom.usb.sh
-    setprop sys.usb.config ${persist.vendor.usb.config}
+    write /config/usb_gadget/g1/strings/0x409/product ${system.usb.product_string}
+    write /config/usb_gadget/g2/strings/0x409/product ${system.usb.product_string}
+    #setprop sys.usb.config ${persist.vendor.usb.config}
     setprop sys.usb.configfs 1
 
 on boot && property:vendor.usb.use_ffs_mtp=1
