wifi: Disable RX wakelock feature

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -514,6 +514,9 @@ gInterfaceChangeWait=1000
 # 1 - enable (Skip DFS Channel)
 gSkipDfsChannelInP2pSearch=0
 
+# Disable rx wakelock
+rx_wakelock_timeout=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
