--- a/pocketmode/AndroidManifest.xml
+++ b/pocketmode/AndroidManifest.xml
@@ -26,6 +26,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.github.maytinhdibo.pocket"
+    xmlns:tools="http://schemas.android.com/tools"
     android:sharedUserId="android.uid.system"
     android:versionCode="1"
     android:versionName="1.0">
@@ -46,6 +47,11 @@
     <application
         android:label="@string/pocketmode_short_title"
         android:persistent="true">
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:replace="android:authorities"/>
 
         <receiver android:name=".receiver.BootCompletedReceiver">
             <intent-filter>
