--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -37,6 +37,10 @@ on early-init
     mkdir /dsp 0771 media media
     symlink /data/tombstones /tombstones
 
+on early-fs
+    # We need vold early for metadata encryption
+    start vold
+
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
@@ -63,6 +67,10 @@ on post-fs
 #    group system
 
 on late-fs
+    # Wait for keymaster
+    exec_start wait_for_keymaster
+
+    # Mount RW partitions which need run fsck
     mount_all /vendor/etc/fstab.qcom --late
 
 on post-fs-data
